--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
-
+<!doctype html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Invoice</title>
+		<link rel="stylesheet" href="style.css">
+		<link rel="license" href="http://www.opensource.org/licenses/mit-license/">
+		<script src="script.js"></script>
+	</head>
+	<body>
+		<header>
+			<h1>Invoice</h1>
+			<address contenteditable>
+				<p>MY NAME</p>
+				<p>MY ADRESS<br>CITY STATE</p>
+				<p>(000) 000-0000</p>
+			</address>
+			<span><img alt="" src="logo4.png"><input type="file" accept="image/*"></span>
+		</header>
+		<article>
+			<h1>Recipient</h1>
+			<address contenteditable>
+				<p>Some Company<br>Some Address</p>
+			</address>
+			<table class="meta">
+				<tr>
+					<th><span contenteditable>Invoice #</span></th>
+					<td><span contenteditable>0000332</span></td>
+				</tr>
+				<tr>
+					<th><span contenteditable>Invoice Date</span></th>
+					<td><span contenteditable>05/21/2024</span></td>
+				</tr>
+				<tr>
+					<th><span contenteditable>Amount Due</span></th>
+					<td><span id="prefix" contenteditable>$</span><span>600.00</span></td>
+				</tr>
+			</table>
+			<table class="inventory">
+				<thead>
+					<tr>
+						<th><span contenteditable>Item</span></th>
+						<th><span contenteditable>Description</span></th>
+						<th><span contenteditable>Unit Price</span></th>
+						<th><span contenteditable>Quantity</span></th>
+						<th><span contenteditable>Ammount</span></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td><a class="cut">-</a><span contenteditable>Service</span></td>
+						<td><span contenteditable>Install ...</span></td>
+						<td><span data-prefix>$</span><span contenteditable>150.00</span></td>
+						<td><span contenteditable>4</span></td>
+						<td><span data-prefix>$</span><span>600.00</span></td>
+					</tr>
+				</tbody>
+			</table>
+			<a class="add">+</a>
+			<table class="balance">
+				<tr>
+					<th><span contenteditable>Total</span></th>
+					<td><span data-prefix>$</span><span>600.00</span></td>
+				</tr>
+				<tr>
+					<th><span contenteditable>Amount Paid</span></th>
+					<td><span data-prefix>$</span><span contenteditable>0.00</span></td>
+				</tr>
+				<tr>
+					<th><span contenteditable>Balance Due</span></th>
+					<td><span data-prefix>$</span><span>600.00</span></td>
+				</tr>
+			</table>
+		</article>
+		<aside>
+			<h1><span contenteditable>Invoice Notes</span></h1>
+			<div contenteditable>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi illo sed eligendi, veniam aut, reiciendis id fugit quas expedita beatae corporis deleniti dolorum dicta delectus, in eum sequi omnis doloribus.</p>
+			</div>
+		</aside>
+	</body>
+</html>
