--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 				<p>MY ADRESS<br>CITY STATE</p>
 				<p>(000) 000-0000</p>
 			</address>
-			<span><img alt="" src="logo4.png"><input type="file" accept="image/*"></span>
+			<span contenteditable style="font-size: 28px;"><P>INVOICE</P></span>
+			<!-- <span><img alt="" src="logo4.png"><input type="file" accept="image/*"></span> -->
 		</header>
 		<article>
 			<h1>Recipient</h1>
